--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "type": "module",
   "scripts": {
     "start": "node --watch ./index.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "fs": "node --watch ./index.js --pers fs",
+    "test": "node ./index.js -p 9000 --mode test --pers mongo",
+    "prod": "node ./index.js -p 9000 --mode prod --pers mongo"
   },
   "keywords": [],
   "author": "Lisette Miranda",
